Challange-section-update

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 </head>
 <body>
+    <!-- Header Section -->
     <header>
         <section class="header">
         <h1 class="brand">Fitness</h1>
@@ -52,14 +53,47 @@
         </section>
     </header>
     <main>
+        <!-- Chnage Habit Section -->
         <section class="change-habit">
             <div class="change-description">
                 <h1>Change Your Habits</h1>
                 <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
-
             </div>
             <div class="change-cart">
+                <div class="cart-box1">
+                    <img src="./images/image 3.png" alt="">
+                    <h3>Movement</h3>
+                    <p>We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="cart-box2">
+                    <img src="./images/image 2.png" alt="">
+                    <h3>Time</h3>
+                    <p>We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="cart-box3">
+                    <img src="./images/image 4.png" alt="">
+                    <h3>Practice</h3>
+                    <p>We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="cart-box4">
+                    <img src="./images/image 5.png" alt="">
+                    <h3>Weight Loss</h3>
+                    <p>We believe fitness should be accessible to everyone</p>
+                </div>
 
+            </div>
+
+            <div class="run-extra">
+                <div class="run-description">
+                    <h1>Run an Extra 
+                        Mile Easily</h1>
+                        <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                        <button class="btn-primary" id="join">Join Now</button>
+                </div>
+                <div class="run-picture">
+                    <img src="./images/run.jpg" alt="">
+
+                </div>
             </div>
 
         </section>
