--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <!-- Header Section -->
+        <!-- Header Section -->
     <header>
         <section class="header">
         <h1 class="brand">Fitness</h1>
@@ -98,6 +98,58 @@
 
         </section>
 
+
+        <!-- Meet our team Section -->
+        <div class="des">
+            <h1>Meet Our Team</h1>
+            <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+        </div>
+         <section class="meet-team">
+
+            <div class="team-person">
+                <img src="./images/trainer1.png" alt="">
+                <div class="t1-name">
+                    <h2>Jerome Bell</h2>
+                    <p>Trainer</p>
+                </div>
+            </div>
+            <div class="team-person">
+                <img src="images/trainer2.png" alt="">
+                <div class="t2-name">
+                    <h2>Gameron Willi</h2>
+                    <p>Trainer</p>
+                </div>
+            </div>
+            <div class="team-person">
+                <img src="./images/trainer3.png" alt="">
+                <div class="t3-name">
+                    <h2>Drrell Steward</h2>
+                    <p>Trainer</p>
+                </div>
+            </div>
+            <div class="team-person">
+                <img src="./images/trainer4.png" alt="">
+                <div class="t4-name">
+                    <h2>Dianne Russell</h2>
+                    <p>Trainer</p>
+                </div>
+            </div>
+            <div class="team-person">
+                <img src="images/trainer5.png" alt="">
+                <div class="t5-name">
+                    <h2>Cody Fisher</h2>
+                    <p>Trainer</p>
+                </div>
+            </div>
+            <div class="team-person">
+                <img src="./images/trainer6.png " alt="">
+                <div class="t6-name">
+                    <h2>Theresa Webb</h2>
+                    <p>Trainer</p>
+                </div>
+            </div>
+
+         </section>
 
 
 
