--- a/index.html
+++ b/index.html
@@ -99,6 +99,78 @@
         </section>
 
 
+        <!-- BMI calculator style-@anirban3365 -->
+
+        
+        <div class="bmi-dis">
+            <h1>BMI Calculator</h1>
+            <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+        </div>
+        
+        <section class="bmi-cal">
+            <div class="cal">
+                <div class="cal-chart">
+                    <h2>BMI Calculator Chart</h2>
+                   <table>
+                        <thead>
+                        <tr>
+                            <td class="theader">BMI </td>
+                            <td class="theader">Weight Status</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Below 18.5</td>
+                            <td>Underweight</td>
+                    ``</tr>
+                      <tr>
+                            <td>18.5 - 24.9</td>
+                            <td>Healthy</td>
+                `   ` </tr>
+                     <tr>
+                            <td>25.0 - 29.9</td>
+                            <td>Overweight</td>
+            ``      </tr>
+                    <tr>
+                            <td>30.0 - and Above</td>
+                            <td>Obese</td>
+        ``          </tr>
+                    </table>
+
+
+                </div>
+                <div class="cal-input">
+                    <div class="input-des">
+                        <h2>Calculate your BMI</h2>
+                        <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
+                    </div>
+                    <div class="binput">
+                        <input type="text" placeholder="Height/cm">
+                        <input type="text" placeholder="Weight/kg">
+                        <input type="text" placeholder="Age">
+                        <select name="sex" id="" placeholder="Sex">
+                            <option value="sex">Sex</option>
+                            <option value="sex"></option>
+                        </select>
+                        <div class="full-box">
+                            <select name="sex" id="" >
+                                <option value="sex">Select an activity store</option>
+                                <option value="sex"></option>
+                            </select>
+                        </div>
+
+                    </div>
+                    <div class="calculate">
+                        <button class="btn-primary" id="cal-btn"> Calculate</button>
+                    </div>
+                </div>
+            </div>
+
+
+         </section>
+
+
+
         <!-- Meet our team Section -->
         <div class="des">
             <h1>Meet Our Team</h1>
