Update-Footer-Section

--- a/index.html
+++ b/index.html
@@ -99,9 +99,7 @@
         </section>
 
 
-        <!-- BMI calculator style-@anirban3365 -->
-
-        
+        <!-- BMI calculator style-@anirban3365 -->   
         <div class="bmi-dis">
             <h1>BMI Calculator</h1>
             <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
@@ -222,6 +220,33 @@
             </div>
 
          </section>
+
+
+         <!-- Footer Section -->
+          <section class="footer">
+            <div class="foot-box">
+                <h1 class="brand">Fitness</h1>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+            </div>
+            <div class="foot-box">
+                <h3>Get Started</h3>
+                <p>Service</p>
+                <p>Contact Us</p>
+                <p>Affiliate Program</p>
+                <p>About Us</p>
+                
+            </div>
+            <div class="foot-box">
+                <h3>Get Started</h3>
+                <p>Fitness</p>
+                <p>Platform</p>
+                <p>Workout Libary</p>
+                <p>App Design</p>
+            </div>
+          </section>
+          <section class="copy-right">
+            <h3>All right resaerved @Anirban 2024</h3>
+          </section>
 
 
 
