Improve-Small-Device

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 </li>
             </ul>
         </nav>
+        <div class="menu"><i class="fa-solid fa-bars"></i></div>
         </section>
 
         <section class="baner">
